# singleron-Server

./: .gitIgnore  CMakeLists.txt  main.cc
controllers/: RequestController.cc  RequestController.h
helloDragon.xcodeproj/: project.pbxproj
helloDragon.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
helloDragon.xcodeproj/project.xcworkspace/xcuserdata/LarsErik.xcuserdatad/: UserInterfaceState.xcuserstate
helloDragon.xcodeproj/xcuserdata/LarsErik.xcuserdatad/xcschemes/: xcschememanagement.plist
helloDragon/enteties/: User.cpp  User.hpp
helloDragon/helpers/: LEOptional.cpp  LEOptional.hpp  RInstance.cpp  RInstance.hpp
helloDragon/logicUnits/: Authentication.cpp  Authentication.hpp  DatabaseConnector.cpp  DatabaseConnector.hpp  Filewriter.cpp  Filewriter.hpp  QueryFactory.cpp  QueryFactory.hpp
